--- a/config-task.yml
+++ b/config-task.yml
@@ -20,13 +20,13 @@ task_executable_network: 'IPFS'
 task_audit_program: 'dist/main.js'
 
 # Round time: (Required) Duration of task, measured in slots (with each slot approximately equal to 408ms).
-round_time: 9000
+round_time: 10000
 
 # Audit window: (Required) The audit window should be greater than 1/3 of the round time.
 audit_window: 3600
 
 # Submission window: (Required) The submission window should be greater than 1/3 of the round time.
-submission_window: 3600
+submission_window: 6000
 
 # Minimum stake amount: (Required) The minimum amount of KOII that a user must stake in order to participate in the task.
 minimum_stake_amount: 0.1
@@ -48,7 +48,7 @@ allowed_failed_distributions: 3
 
 # Space: (Required) Expected Task Data Size in MBs for the account size. 
 # Minimum: 1 for production, 0.1 for testing; Calculation Details: https://www.koii.network/docs/develop/command-line-tool/create-task-cli/create-task#space
-space: 0.1
+space: 1
 
 # Requirement Tags: (Optional): To add more global variables and task variables, please refer to the type, value, description format shown below.
 requirementsTags: []
@@ -60,7 +60,7 @@ environment: "PRODUCTION"
 
 #################################### BELOW IS FOR UPDATE TASK ONLY ####################################
 # Old Task ID: (ONLY for task update) 
-task_id: '77iMLfMSeMni58ECHJ1j1dvfG2Po1ZiToZNmYg5QDAcs'
+task_id: 'CSHZ3Fh649Mw6KvpEKfRrkaWuuhM4udMqV2BvSy2tELq'
 
 # Migration Description: (ONLY for task update)
-migrationDescription: 'Added bounty amount per round'
+migrationDescription: 'Added Sybil fix'
